maybe mobile overflow issue fix

--- a/assets/css/girlscout.css
+++ b/assets/css/girlscout.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 .width {
-	margin:auto;
+	margin:inherit;
 	overflow-x: hidden;
 	max-width: 100%;
 	position: relative;
@@ -144,7 +144,6 @@
 }
 
 .footer {
-	display: flex;
 	justify-content: space-around;
 	background-color: #00A850;
 	color:white;
